--- a/project/frontend/personal-crm/src/pages/Login.css
+++ b/project/frontend/personal-crm/src/pages/Login.css
@@ -23,13 +23,9 @@
     border: 1px solid red;
   }
   
-  .redlink {
+  .bluelink {
     color: #009999;
     text-decoration: none;
-  }
-  
-  .redlink:hover {
-    text-decoration: underline;
   }
   
   body {
@@ -39,6 +35,7 @@
  .btn-primary {
     background-color: #121495; 
     border-color: #121495; 
+    color: white;
   }
   
   .btn-primary:hover {
@@ -46,6 +43,6 @@
     border-color: #0f1370; 
   }
   
-  .btn-primary {
-    color: white;
+  .redtext {
+    color: red;
   }
